style.css is more logic and fixed the logo responsive on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,18 @@ html {
 	background-color: #fa4616;
 }
 
+/*----------------------Card-deck---------------- */
+
+/*This fixes responsive errors in the card-decks on smaller screen sizes using CSS-grid.
+Created by user exitarz on Stackoverflow:
+https://stackoverflow.com/questions/36487389/bootstrap-4-card-deck-table-cell-columns-responsive-based-on-viewport*/
+
+.card-deck {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: .5rem;
+}
+
 /*----------------------Navbar---------------- */
 
 .navbar {
@@ -134,6 +146,15 @@ html {
 	color: #fff;
 }
 
+@media screen and (max-width: 600px) {
+	#logo h1 {
+		padding-top: 20%;
+	}
+	#logo h6 {
+		padding-top: 2%;
+	}
+}
+
 /*----------------------small header contactbox---------------- */
 
 .contactbox {
@@ -196,12 +217,6 @@ html {
 
 /*----------------------Products---------------- */
 
-.card-deck {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: .5rem;
-}
-
 .productcard {
 	border: 0;
 }
@@ -245,7 +260,6 @@ html {
 }
 
 .service-container h3 {
-	font-family: Oswald;
 	font-style: normal;
 	font-weight: 300;
 	font-size: 30px;
